--- a/product.html
+++ b/product.html
@@ -192,9 +192,6 @@
             </div>
           </div>
         </div>
-        <div class="titel-tecs">
-          <h1 class="display-3 text-center test2">Technische details</h1>
-        </div>
         <div class="position-absolute cloud5">
           <svg xmlns="http://www.w3.org/2000/svg" width="332.794" height="180.127" viewBox="0 0 332.794 180.127">
             <g id="cloud" transform="translate(-213.584 -583.079)">
@@ -257,6 +254,10 @@
             </g>
           </svg>
         </div>
+        <div class="titel-tecs">
+          <h1 class="display-3 text-center test2">Technische details</h1>
+        </div>
+        <!--test
         <div class="row row-tecs">
           <div class="row align-items-center">
             <div class="col-sm-4">
@@ -276,7 +277,187 @@
             </div>
           </div>
       </div>
+    -->
+    <table class="table table-bordered table-tecs">
+      <tbody>
+        <tr>
+          <th class="Tlinks" scope="col1 row1">groot</th>
+          <td class="Trechts" scope="col2 row1">100 x 100 x 100mm</td>
+        </tr>
+        <tr>
+          <th class="Tlinks" scope="col1 row2">gewicht</th>
+          <td class="Trechts" scope="col2 row2">150 gram</td>
+        </tr>
+        <tr>
+          <th class="Tlinks" scope="col1 row3">app-connectie</th>
+          <td class="Trechts" scope="col2 row3">Met de app ‘My Pingwing’ hou je altijd een overzicht van alle gegevens.</td>
+        </tr>
+        <tr>
+          <th class="Tlinks" scope="col1 row4">audio</th>
+          <td class="Trechts" scope="col2 row4">Ingebouwde speaker met waarschuwing bij verlaten van de veilige zone.</td>
+        </tr>
+        <tr>
+          <th class="Tlinks" scope="col1 row5">batterij technieken</th>
+          <td class="Trechts" scope="col2 row5">De accu in het horloge wordt opgeladen door beweging van de pols.
+            <br>Het heeft een gangreserve van 5 dagen. Wanneer het horloge stil ligt blijft het nog 5 dagen doorlopen.</td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="position-absolute cloud8">
+      <svg xmlns="http://www.w3.org/2000/svg" width="387.061" height="209.5" viewBox="0 0 387.061 209.5">
+        <g id="cloud" transform="translate(0 0)">
+          <g id="Group_88" data-name="Group 88" transform="translate(55.703 118.04)">
+            <ellipse id="Ellipse_73" data-name="Ellipse 73" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(239.899)" fill="#fff"/>
+            <ellipse id="Ellipse_74" data-name="Ellipse 74" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(235.195)" fill="#fff"/>
+            <ellipse id="Ellipse_75" data-name="Ellipse 75" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(230.491)" fill="#fff"/>
+            <ellipse id="Ellipse_76" data-name="Ellipse 76" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(225.787)" fill="#fff"/>
+            <ellipse id="Ellipse_77" data-name="Ellipse 77" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(221.083)" fill="#fff"/>
+            <ellipse id="Ellipse_78" data-name="Ellipse 78" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(216.379)" fill="#fff"/>
+            <ellipse id="Ellipse_79" data-name="Ellipse 79" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(211.675)" fill="#fff"/>
+            <ellipse id="Ellipse_80" data-name="Ellipse 80" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(206.971)" fill="#fff"/>
+            <ellipse id="Ellipse_81" data-name="Ellipse 81" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(202.268)" fill="#fff"/>
+            <ellipse id="Ellipse_82" data-name="Ellipse 82" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(197.564)" fill="#fff"/>
+            <ellipse id="Ellipse_83" data-name="Ellipse 83" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(192.86)" fill="#fff"/>
+            <ellipse id="Ellipse_84" data-name="Ellipse 84" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(188.156)" fill="#fff"/>
+            <ellipse id="Ellipse_85" data-name="Ellipse 85" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(183.452)" fill="#fff"/>
+            <ellipse id="Ellipse_86" data-name="Ellipse 86" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(178.748)" fill="#fff"/>
+            <ellipse id="Ellipse_87" data-name="Ellipse 87" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(174.044)" fill="#fff"/>
+            <ellipse id="Ellipse_88" data-name="Ellipse 88" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(169.34)" fill="#fff"/>
+            <ellipse id="Ellipse_89" data-name="Ellipse 89" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(164.636)" fill="#fff"/>
+            <ellipse id="Ellipse_90" data-name="Ellipse 90" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(159.932)" fill="#fff"/>
+            <ellipse id="Ellipse_91" data-name="Ellipse 91" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(155.229)" fill="#fff"/>
+            <ellipse id="Ellipse_92" data-name="Ellipse 92" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(150.525)" fill="#fff"/>
+            <ellipse id="Ellipse_93" data-name="Ellipse 93" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(145.821)" fill="#fff"/>
+            <ellipse id="Ellipse_94" data-name="Ellipse 94" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(141.117)" fill="#fff"/>
+            <ellipse id="Ellipse_95" data-name="Ellipse 95" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(136.413)" fill="#fff"/>
+            <ellipse id="Ellipse_96" data-name="Ellipse 96" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(131.709)" fill="#fff"/>
+            <ellipse id="Ellipse_97" data-name="Ellipse 97" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(127.005)" fill="#fff"/>
+            <ellipse id="Ellipse_98" data-name="Ellipse 98" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(122.301)" fill="#fff"/>
+            <ellipse id="Ellipse_99" data-name="Ellipse 99" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(117.597)" fill="#fff"/>
+            <ellipse id="Ellipse_100" data-name="Ellipse 100" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(112.893)" fill="#fff"/>
+            <ellipse id="Ellipse_101" data-name="Ellipse 101" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(108.19)" fill="#fff"/>
+            <ellipse id="Ellipse_102" data-name="Ellipse 102" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(103.486)" fill="#fff"/>
+            <ellipse id="Ellipse_103" data-name="Ellipse 103" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(98.782)" fill="#fff"/>
+            <ellipse id="Ellipse_104" data-name="Ellipse 104" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(94.078)" fill="#fff"/>
+            <ellipse id="Ellipse_105" data-name="Ellipse 105" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(89.374)" fill="#fff"/>
+            <ellipse id="Ellipse_106" data-name="Ellipse 106" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(84.67)" fill="#fff"/>
+            <ellipse id="Ellipse_107" data-name="Ellipse 107" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(79.966)" fill="#fff"/>
+            <ellipse id="Ellipse_108" data-name="Ellipse 108" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(75.262)" fill="#fff"/>
+            <ellipse id="Ellipse_109" data-name="Ellipse 109" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(70.558)" fill="#fff"/>
+            <ellipse id="Ellipse_110" data-name="Ellipse 110" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(65.855)" fill="#fff"/>
+            <ellipse id="Ellipse_111" data-name="Ellipse 111" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(61.151)" fill="#fff"/>
+            <ellipse id="Ellipse_112" data-name="Ellipse 112" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(56.447)" fill="#fff"/>
+            <ellipse id="Ellipse_113" data-name="Ellipse 113" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(51.743)" fill="#fff"/>
+            <ellipse id="Ellipse_114" data-name="Ellipse 114" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(47.039)" fill="#fff"/>
+            <ellipse id="Ellipse_115" data-name="Ellipse 115" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(42.335)" fill="#fff"/>
+            <ellipse id="Ellipse_116" data-name="Ellipse 116" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(37.631)" fill="#fff"/>
+            <ellipse id="Ellipse_117" data-name="Ellipse 117" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(32.927)" fill="#fff"/>
+            <ellipse id="Ellipse_118" data-name="Ellipse 118" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(28.223)" fill="#fff"/>
+            <ellipse id="Ellipse_119" data-name="Ellipse 119" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(23.519)" fill="#fff"/>
+            <ellipse id="Ellipse_120" data-name="Ellipse 120" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(18.816)" fill="#fff"/>
+            <ellipse id="Ellipse_121" data-name="Ellipse 121" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(14.112)" fill="#fff"/>
+            <ellipse id="Ellipse_122" data-name="Ellipse 122" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(9.408)" fill="#fff"/>
+            <ellipse id="Ellipse_123" data-name="Ellipse 123" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(4.704)" fill="#fff"/>
+            <ellipse id="Ellipse_124" data-name="Ellipse 124" cx="45.73" cy="45.73" rx="45.73" ry="45.73" transform="translate(0)" fill="#fff"/>
+          </g>
+          <ellipse id="Ellipse_125" data-name="Ellipse 125" cx="104.75" cy="104.75" rx="104.75" ry="104.75" transform="translate(0 0)" fill="#fff"/>
+          <ellipse id="Ellipse_126" data-name="Ellipse 126" cx="86.832" cy="86.832" rx="86.832" ry="86.832" transform="translate(162.406 35.836)" fill="#fff"/>
+        </g>
+      </svg>
+      
+    </div>
+    <div class="row row-app">
+      <div class="col-sm-4 scherm1">
+        <img src="./Images/mockup_1.png" alt="scherm1 app">
+      </div>
+      <div class="col-sm-8 tekst-scherm1">
+        <h1 class="display-3 titel-app">MyPingwing</h1><br>
+        <!--image bomen
+        <div class="position-absolute bomen">
+          <img src="./Images/bomen.png" alt="bomen">
+        </div>
+        -->
+        <p class="p1">Connectie met het bandje</p><br>
+        <p class="p2">Met onze app hoef je nooit meer lang naar je kinderen te zoeken. Zoek via de kaart de locatie van het bandje en krijg een overzicht waar het bandje zich bevind.
+          Je  krijgt automatisch op de kaart de radius te zien. Een probleem? 
+          Klik meteen een noodmelding door naar het bandje dat je kleine speelvogel weet dat het welletjes is geweest en hij/zij terug mag keren naar het nest.</p><br>
+        <p class="p2">Het bandje zendt een beveiligd Bluetooth-signaal uit, dat kan worden opgepikt door de app. Vervolgens zie je op de kaart in de ‘MyPingwing’-app waar dat is.
+          Dit hele proces is anoniem en is versleuteld om je privacy te beschermen. 
+          Het werkt heel efficiënt, en op bewegingsenergie. Dus je hoeft je geen zorgen te maken over je batterijduur of dataverbruik.</p>
+        </div>
+        <div class="col-sm-8 tekst-scherm2">
+          <p class="p1">Functionaliteiten</p><br>
+          <p class="p2">Het bandje zendt een beveiligd Bluetooth-signaal uit, dat kan worden opgepikt door de app. Vervolgens zie je op de kaart in de ‘MyPingwing’-app waar dat is.
+            Dit hele proces is anoniem en is versleuteld om je privacy te beschermen. 
+            Het werkt heel efficiënt, en op bewegingsenergie. Dus je hoeft je geen zorgen te maken over je batterijduur of dataverbruik.</p><br>
+            <div class="download">
+              <img src="/Images/andriod.png" alt="download op android" class="android">
+              <img src="./Images/apple.png" alt="download op IOS" class="apple">
+            </div>
+        </div>
+        <div class="col-sm-4 scherm2">
+          <img src="./Images/mockup_2.png" alt="scherm2 app">
+        </div>
+    </div>
+    <!--image bomen
+    <div class="position-absolute bomen">
+      <img src="./Images/bomen2.png" alt="bomen">
+    </div>
+  -->
+    </div>
   </main>
+<!--FOOTER-->
+            <footer class="row">
+              <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer py-3 py-md-5">
+                  <div class="column1-footer-links d-flex flex-column">
+                      <a class="pb-4" href="./index.html">Home</a>
+                      <a class="pb-4" href="./product.html">Product</a>
+                      <a class="pb-4" href="./over_ons.html">Over ons</a>
+                      <a href="./contact.html">Contact</a>
+                  </div>
+              </div>
+              <div class="col-md-4 d-flex flex-column align-items-center justify-content-between column2-footer py-3">
+                  <div class="pb-2">
+                      <h2>PINGWING</h2>
+                  </div>
+                  <div class="pb-2">
+                      <a class="pr-2" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                          <ion-icon name="logo-youtube"></ion-icon>
+                      </a>
+                      <a class="px-1" href="www.linkedin.com/">
+                          <ion-icon name="logo-linkedin"></ion-icon>
+                      </a>
+                      <a class="px-1" href="https://www.facebook.com">
+                          <ion-icon name="logo-facebook"></ion-icon>
+                      </a>
+                      <a class="pl-2" href="https://www.instagram.com">
+                          <ion-icon name="logo-instagram"></ion-icon>
+                      </a>
+                  </div>
+                  <div>
+                      <p>2021 &copy; PINGWING</p>
+                  </div>
+              </div>
+              <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-md-5">
+                  <div class="column3-footer-info">
+                      <div class="info pb-4">
+                          <ion-icon name="call-outline"></ion-icon>
+                          <p>+32 123 45 789</p>
+                      </div>
+                      <div class="info pb-4">
+                          <ion-icon name="mail-outline"></ion-icon>
+                          <a href="mailto:test@test.com">Info@PingWing.be</a>
+                      </div>
+                      <div class="info">
+                          <ion-icon name="location-outline"></ion-icon>
+                          <p class="m-0">
+                              Kempische Steenweg 293<br>
+                              3500 Hasselt
+                          </p>
+                      </div>
+                  </div>
+              </div>
+          </footer>
 </div>
 </body>
 </html>
