--- a/over_ons.html
+++ b/over_ons.html
@@ -17,17 +17,18 @@
     <title>Over Ons</title>
 </head>
 <body>
-<!-- NAVIGATIEBALK-->
-    <div class="container-fluid fullpage m-0 p-0"> 
+    <!-- NAVIGATIEBALK-->
+    <div class="container-fluid fullpage m-0 p-0">
         <div class="container-fluid fullpage m-0 p-0">
             <nav class="navbar navbar-expand-md navbar-light">
                 <a class="navbar-brand brand" href="./index.html">Pingwing</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <div class="">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="">
                         <div class="hamburger">
                             <div class="hamburgermenu"></div>
                         </div>
-                    </div>
+                    </span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav navigation-list">
@@ -59,128 +60,158 @@
                     </ul>
                 </div>
             </nav>
-        <!--MAIN-->
-        <main class="main container">
-            <div class="row py-5 my-5">
-                <div class="col-md-6 justify-content-md-start column-header">
-                    <h1 class="header-text">OVER <br> PINGWING</h1>
+            <!--MAIN-->
+            <div class=" uber-main-container">
+                <main class="main container">
+                    <div class="row py-5 my-5">
+                        <div class="col-md-6 mt-5 pt-5 justify-content-md-start column-header">
+                            <h1 class="header-text">OVER <br> PINGWING</h1>
+                        </div>
+                        <div class="col-md-6 mt-5 pt-5 justify-content-sm-start column-header">
+                            <div>
+                                <h4>Onze missie is om ouders en kinderen overal veiligheid te bieden op een eenvoudige
+                                    manier.</h4>
+                                <br>
+                                <p>Wij nemen de verantwoordelijkheid op ons door een product te creëren waarmee we
+                                    ouders veiligheid bieden. Dit verzekeren wij door het gebruik van hoogwaardige
+                                    materialen. Daarbij houden wij onze diensten up-to-date.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="col-md-4 my-5 py-5 column-content">
+                            <h4>Team</h4>
+                            <p>Een gedisciplineerd team van 5 studenten dat streeft naar een veilig gevoel voor kinderen
+                                en een geruststellend gevoel voor ouders.</p>
+                        </div>
+                        <div class="col-md-4 my-5 py-5 column-content">
+                            <h4>Focus</h4>
+                            <p>Wij bij “PingWing” focussen op het gebruiksgemak van onze armband, applicatie & website
+                                door overzichtelijke interfaces te voorzien. De armband geeft duidelijke signalen naar
+                                het kind door middel van geluid- en lichtsignalen.</p>
+                            </div>
+                                <div class="col-md-4 my-5 py-5 column-content">
+                                    <h4>Onze missie</h4>
+                                    <p>Wij gaan ervoor om ouders een veilig gevoel te geven en kinderen gerust te
+                                        stellen in hun omgeving.</p>
+                                </div>
+                        </div>
+                        <div class="row">
+                            <div
+                                class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
+                                <img src="./images/RikHoofd.png" alt="Rik">
+                            </div>
+                            <div class="col-md-6 py-md-5 pb-5 column-content">
+                                <h1 class="text-md-right text-center my-5 bg1">Rik</h1>
+                                <p>"Hij weet van aanpakken! Rik is vertrouwd met de code. <br>
+                                    Hij houdt er van!<br>
+                                    Als hij zich ergens in vastbijt gaat het lukken.
+                                    </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 py-md-5 pb-5 column-content">
+                            <h1 class="text-md-left text-center my-5">Kai</h1>
+                            <p>"Design is zijn ding! Ook coderen is voor hem geen probleem.<br>
+                                Zijn Kritische blik helpt het team vooruit.<br>
+                                Kijk wel uit als hij aan komt scheuren op zijn elektrische step!
+                            </p>
+                        </div>
+                        <div
+                            class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
+                            <img src="./images/KaiHoofd.png" alt="Kai">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div
+                            class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
+                            <img src="./images/ThymenHoofd.png" alt="Thymen">
+                        </div>
+                        <div class="col-md-6 py-md-5 pb-5 column-content">
+                            <h1 class="text-md-right text-center my-5">Thymen</h1>
+                            <p>De oudste van de groep, maar dat merk je niet altijd! <br>
+                                Hij houdt zich graag bezig met design en met de code. <br>
+                                Ook tekent hij graag iets uit in CAD.
+                                </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 py-md-5 pb-5 column-content">
+                            <h1 class="text-md-left text-center dries my-5">Dries</h1>
+                            <p>XD is zijn tweede natuur, design is zijn ding!<br>
+                                Dries is een gepassioneerde teamplayer, <br>
+                                het is nooit saai als hij er is.</p>
+                                                    </div>
+                        <div
+                            class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
+                            <img src="./images/DriesHoofd.png" alt="Dries">
+                        </div>
+                    </div>
+                    <div class="row pb-5">
+                        <div
+                            class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
+                            <img src="./images/ArishaHoofd.png" alt="Arisha">
+                        </div>
+                        <div class="col-md-6 py-md-5 pb-5 column-content">
+                            <h1 class="text-md-right text-center my-5">Arisha</h1>
+                                                        <p>Ze tovert illustraties op haar tablet alsof het niets is!<br>
+                                Arisha is een harde werker en vult de mannen in het team goed aan.</p>
+                        </div>
+                    </div>
+                </main>
+            </div>
+            <!--FOOTER-->
+            <footer class="row">
+                <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer py-3 py-md-5">
+                    <div class="column1-footer-links d-flex flex-column">
+                        <a class="pb-4" href="./index.html">Home</a>
+                        <a class="pb-4" href="./product.html">Product</a>
+                        <a class="pb-4" href="./over_ons.html">Over ons</a>
+                        <a href="./contact.html">Contact</a>
+                    </div>
                 </div>
-                <div class="col-md-6 justify-content-sm-start column-header">
+                <div class="col-md-4 d-flex flex-column align-items-center justify-content-between column2-footer py-3">
+                    <div class="pb-2">
+                        <h2>PINGWING</h2>
+                    </div>
+                    <div class="pb-2">
+                        <a class="pr-2" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                            <ion-icon name="logo-youtube"></ion-icon>
+                        </a>
+                        <a class="px-1" href="www.linkedin.com/">
+                            <ion-icon name="logo-linkedin"></ion-icon>
+                        </a>
+                        <a class="px-1" href="https://www.facebook.com">
+                            <ion-icon name="logo-facebook"></ion-icon>
+                        </a>
+                        <a class="pl-2" href="https://www.instagram.com">
+                            <ion-icon name="logo-instagram"></ion-icon>
+                        </a>
+                    </div>
                     <div>
-                        <h4>Onze missie is om ouders en kinderen overal veiligheid te bieden op een eenvoudige manier.</h4>
-                        <br>
-                        <p>Wij nemen de verantwoordelijkheid op ons door een product te creëren waarmee we ouders veiligheid bieden. Dit verzekeren wij door het gebruik van hoogwaardige materialen. Daarbij houden wij onze diensten up-to-date.</p>
+                        <p>2021 &copy; PINGWING</p>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
-                    <img src="./images/RikHoofd.png" alt="Rik">
-                  </div>
-                <div class="col-md-6 py-md-5 pb-5 column-content">
-                    <h1 class="text-md-left text-center">Rik</h1>
-                    <p>"Wanneer welle broodjes halen? xd"</p>
-                    <p>"Het project PingWing vind ik een zeer goed iniatief, ik sta er voor dat alle kinderen zich veilig voelen."<br>
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 py-md-5 pb-5 column-content">
-                    <h1 class="text-md-left text-center">Kai</h1>
-                    <p>"Tis mig allemaal iets"</p>
-                    <p>"Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd""Wanneer welle broodjes halen? xd"<br>
-                       "Wanneer welle broodjes halen? xd""<br>
-                    </p>
-                </div>
-                <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
-                    <img src="./images/KaiHoofd.png" alt="Kai">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
-                    <img src="./images/ThymenHoofd.png" alt="Thymen">
-                </div>
-                <div class="col-md-6 py-md-5 pb-5 column-content">
-                    <h1 class="text-md-left text-center">Thymen</h1>
-                    <p>"Jama, ijsberen en pinguins zitten nooit samen op de noordpool"</p>
-                    <p>"Al jaren ben ik Werkzaam bij PingWing, ik houd me voornamelijk bezig met coding"<br>
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 py-md-5 pb-5 column-content">
-                    <h1 class="text-md-left text-center">Dries</h1>
-                    <p>"Designer by day, comic sanser by night"</p>
-                    <p>"Ik ben een werknemer bij het bedrijf met als functie Graphic designer."<br>
-                    </p>
-                </div>
-                <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-end justify-content-center column-picture">
-                    <img src="./images/DriesHoofd.png" alt="Dries">
-                </div>
-            </div>
-            <div class="row pb-5">
-                <div class="col-md-6 py-md-5 pt-5 d-flex justify-content-md-start justify-content-center column-picture">
-                    <img src="./images/ArishaHoofd.png" alt="Arisha">
-                </div>
-                <div class="col-md-6 py-md-5 pb-5 column-content">
-                    <h1 class="text-md-left text-center">Arisha</h1>
-                    <p>"Klik, klik en klaar"</p>
-                    <p>"Ik werk al 7 jaar lang bij PingWing als Graphic designer."<br></p>
-                </div>
-            </div>
-        </main>
-        <!--FOOTER-->
-        <footer class="row">
-            <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer py-3 py-md-5">
-                <div class="column1-footer-links d-flex flex-column">
-                    <a class="pb-4" href="./index.html">Home</a>
-                    <a class="pb-4" href="./product.html">Product</a>
-                    <a class="pb-4" href="./over_ons.html">Over ons</a>
-                    <a href="./contact.html">Contact</a>
-                </div>
-            </div>
-            <div class="col-md-4 d-flex flex-column align-items-center justify-content-between column2-footer py-3">
-                <div class="pb-2">
-                    <h2>PINGWING</h2>
-                </div>
-                <div class="pb-2">
-                    <a class="pr-2" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-                        <ion-icon name="logo-youtube"></ion-icon>
-                    </a>
-                    <a class="px-1" href="www.linkedin.com/">
-                        <ion-icon name="logo-linkedin"></ion-icon>
-                    </a>
-                    <a class="px-1" href="https://www.facebook.com">
-                        <ion-icon name="logo-facebook"></ion-icon>
-                    </a>
-                    <a class="pl-2" href="https://www.instagram.com">
-                        <ion-icon name="logo-instagram"></ion-icon>
-                    </a>
-                </div>
-                <div>
-                    <p>2021 &copy; PINGWING</p>
-                </div>
-            </div>
-            <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-md-5">
-                <div class="column3-footer-info">
-                    <div class="info pb-4">
-                        <ion-icon name="call-outline"></ion-icon>
-                        <p>+32 123 45 789</p>
+                <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-md-5">
+                    <div class="column3-footer-info">
+                        <div class="info pb-4">
+                            <ion-icon name="call-outline"></ion-icon>
+                            <p>+32 123 45 789</p>
+                        </div>
+                        <div class="info pb-4">
+                            <ion-icon name="mail-outline"></ion-icon>
+                            <a href="mailto:test@test.com">Info@PingWing.be</a>
+                        </div>
+                        <div class="info">
+                            <ion-icon name="location-outline"></ion-icon>
+                            <p class="m-0">
+                                Kempische Steenweg 293<br>
+                                3500 Hasselt
+                            </p>
+                        </div>
                     </div>
-                    <div class="info pb-4">
-                        <ion-icon name="mail-outline"></ion-icon>
-                        <a href="mailto:test@test.com">Info@PingWing.be</a>
-                    </div>
-                    <div class="info">
-                        <ion-icon name="location-outline"></ion-icon>
-                        <p class="m-0">
-                            Kempische Steenweg 293<br>
-                            3500 Hasselt
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </div>
-</body>
+            </footer>
+        </div>
+       </body>
 </html>
