--- a/over_ons.html
+++ b/over_ons.html
@@ -61,7 +61,7 @@
                 </div>
             </nav>
             <!--MAIN-->
-            <div class=" uber-main-container">
+            <div class=" main uber-main-container">
                 <main class="main container">
                     <div class="row py-5 my-5">
                         <div class="col-md-6 mt-5 pt-5 justify-content-md-start column-header">
